--- a/style.css
+++ b/style.css
@@ -9,3 +9,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: mannapress
 Template: astra
 */
+
+.themeform .form-control {
+  width: 100%;
+}
