Added a shortcode for the near future that can be added to the site header for placement of an ad, which is dependent on the page slug.  The code is commented out for now.

--- a/style.css
+++ b/style.css
@@ -13,3 +13,13 @@ Template: astra
 .themeform .form-control {
   width: 100%;
 }
+/*
+#job-listing-ucdsu-logo {
+  text-align: left;
+  padding-left: 20px;
+}
+
+#job-listing-ucdsu-logo img {
+  width: 140px;
+}
+*/
