Add the ucdsu logo to the jobs listing page in the job listing start template.  Also pulled down package-selection template from wc paid listings for upcoming task, but with no changes yet.

--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@ Template: astra
 
 #job-listing-ucdsu-logo {
   text-align: left;
-  padding-left: 20px;
+  padding: 0 20px;
+  font-size: 1.4em;
+  font-weight: 600;
+  color: red;
 }
 
 #job-listing-ucdsu-logo img {
