Move the ucdsu logo to the bottom of the jobs listing.

--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ Template: astra
 
 #job-listing-ucdsu-logo {
   text-align: left;
-  padding: 0 20px;
+  padding: 10px 0 0 20px;
   font-size: 1.4em;
   font-weight: 600;
+  background-color: #d6e2e9;
   color: red;
 }
 
