Added styling to hide the top section Application form of a single job page if the user is logged in.  That way, they only see the top section form if they are not logged in.  And, they only see the bottom section if they are logged in.

--- a/style.css
+++ b/style.css
@@ -56,3 +56,6 @@ Template: astra
 body.single-resume nav.post-navigation {
   display: none;
 }
+body.single-job_listing.logged-in form.job-manager-application-form {
+  display: none;
+}
