Added some styling so that the candidate sign up page can hide the top level <h4>.  This is done by using flex and reversing the direction.  Then, next sibling css selector can be used to hide if a <p> tag is displayed instead of the <form> element.

--- a/style.css
+++ b/style.css
@@ -59,3 +59,11 @@ body.single-resume nav.post-navigation {
 body.single-job_listing.logged-in form.job-manager-application-form {
   display: none;
 }
+
+.taste-register-candidate-container {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.taste-register-candidate-container p + h4 {
+  display: none;
+}
