Add Privacy Policy link to the Terms & Conditions checkbox in the resume submission page.  Also, make the links bold so that they stand out as the Elementor site settings made all <a> tags the exact same look as the surrounding text.

--- a/style.css
+++ b/style.css
@@ -71,3 +71,7 @@ body.single-job_listing.logged-in form.job-manager-application-form {
 .taste-register-candidate-container p + h4 {
   display: none;
 }
+
+#submit-resume-form .fieldset-agreement-checkbox a {
+  font-weight: 600;
+}
